--- a/CoffeeOrderApp/coffeeorder.kv
+++ b/CoffeeOrderApp/coffeeorder.kv
@@ -1,3 +1,6 @@
+# Kivy file to support CoffeeOrderApp
+# Oishik M | 10 May 2020
+
 <CoffeeWidget>:
     GridLayout:
         size: root.width, root.height
